--- a/sass/layout/_responsive.sass
+++ b/sass/layout/_responsive.sass
@@ -1,4 +1,5 @@
 .container
+   //overflow: hidden
    padding-bottom: 150px
 
 .section-responsiv
@@ -7,7 +8,7 @@
    left: 0
    z-index: 2
    background-color: $white
-   overflow: hidden
+   //overflow: hidden
 
 .showcase-desktop-left img
    width: 100%
